# NativeHook

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/eap/com/nch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HookException.h  core.cpp  core.h  elf_format.cpp  elf_log.cpp  elf_log.h  elf_parser.h  hook.cpp  util.c  util.h
app/src/main/cpp/linker/: linked_list.h  linker_namespaces.h
app/src/main/cpp/sym/: hook.cpp  hook.h
app/src/main/cpp/test/: dest.cpp  origin.cpp
app/src/main/java/eap/com/nch/: CronetTester.java  CronetUtils.java  MainActivity.java  MyUrlRequestCallback.java  NativeHook.java
app/src/main/res/values/: strings.xml
app/src/test/java/eap/com/nch/: ExampleUnitTest.java
assemblyInNdk/: CMakeLists.txt  build.gradle
assemblyInNdk/src/androidTest/java/com/eap/assemblyinndk/: ExampleInstrumentedTest.java
assemblyInNdk/src/main/: AndroidManifest.xml
assemblyInNdk/src/main/cpp/: ASM_Sub.s  add.s  hello.s  loader.cpp  loader.h  main_asm.S  multiple.s
assemblyInNdk/src/main/java/com/eap/assemblyinndk/: MainActivity.java
assemblyInNdk/src/main/res/layout/: activity_main.xml
assemblyInNdk/src/main/res/values/: strings.xml
assemblyInNdk/src/test/java/com/eap/assemblyinndk/: ExampleUnitTest.java
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/eap/com/demo/: CronetTester.java  CronetUtils.java  MainActivity.java  MyUrlRequestCallback.java
demo/src/test/java/eap/com/demo/: ExampleUnitTest.java
doc/inline_hook/: method_call.c  method_call.s
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: elf_dl_hook.cpp  elf_dl_hook.h  elf_hook.cpp  elf_hook.h  elf_linker.cpp  elf_linker.h  hook.cpp  jni_loader.h
lib/src/main/cpp/android/: internal.h  link_support.h
lib/src/main/java/com/eap/nh/lib/: NativeHook.java
plt_lib/src/main/cpp/: elf_dl_hook.cpp  elf_hook.cpp  elf_hook.h  elf_linker.h  hook.cpp  jni_loader.cpp
plt_lib/src/main/cpp/android/: external.h  linker.h  linker_common_types.h
plt_lib/src/test/java/com/eap/nh/lib/: ExampleUnitTest.java
simpleso/: CMakeLists.txt  README  build.gradle
simpleso/src/androidTest/java/open/qukan/com/simpleso/: ExampleInstrumentedTest.java
simpleso/src/main/: AndroidManifest.xml
simpleso/src/main/cpp/: hook.cpp
simpleso/src/main/java/open/qukan/com/simpleso/: MainActivity.java  SoInvoker.java
simpleso/src/main/res/values/: strings.xml
simpleso/src/test/java/open/qukan/com/simpleso/: ExampleUnitTest.java
sympickapp/: CMakeLists.txt  build.gradle
sympickapp/src/androidTest/java/eap/com/sympickapp/: ExampleInstrumentedTest.java
sympickapp/src/main/: AndroidManifest.xml
sympickapp/src/main/cpp/: jni_loader.h
sympickapp/src/main/cpp/pick/: Container.h  Picker.cpp
sympickapp/src/main/cpp/pool/: Container.cpp  Container.h  Pool.cpp
sympickapp/src/main/java/eap/com/sympickapp/: MainActivity.java  NativeBridge.java
sympickapp/src/main/res/values/: strings.xml
sympickapp/src/test/java/eap/com/sympickapp/: ExampleUnitTest.java
